<resources>
    <string name="app_name">FriedoMobile</string>
    <string name="keep_logged_in_question">Keep in mind? (RISKY!!!)</string>
    <string name="login">Log in</string>
    <string name="timetable">Timetable</string>
    <string name="deadlines">Deadlines</string>
    <string name="name">Name</string>
    <string name="passwort">Password</string>
    <string name="today">Today</string>
    <string name="cancelled">Cancelled</string>
    <string name="persons">Persons</string>
    <string name="places">Places</string>
    <string name="news">News</string>
    <string name="config">Config</string>
    <string name="say_thankyou">Say THX :D</string>
    <string name="back_to_main">Back To Main Menu</string>
    <string name="vorname">First Name</string>
    <string name="nachname">Name</string>
    <string name="einrichtung">Department</string>
    <string name="chose_function">Chose Function</string>
    <string name="room">Room</string>
    <string name="building">Building</string>
    <string name="chose_campus">Chose Campus</string>
    <string name="chose_space_manager">Chose Space Manager</string>
    <string name="chose_roomtype">Chose Room Type</string>
    <string name="suche_starten">Start Search</string>
    <string name="map">Map</string>
    <string name="back">Go Back</string>
    <string name="today_change">Heute / Ändern</string>
    <string name="suche">Search</string>
    <string name="welcome">Welcome @name! (@rolle)</string>
    <string name="force_refresh">Force Refresh</string>
    <string name="loginPlease">Please LogIn first!</string>
    <string name="delete_date">Delete date</string>
    <string name="apply_all">Apply for all with the same name+start+end?</string>
    <string name="save">Apply</string>
    <string name="deletetitle">Are you sure you want to erase all downloaded timetable date?</string>
    <string name="areyousure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="faq">FAQ|Help</string>
    <string name="not_supported">This is not yet implemented! Please use another source.</string>
    <string name="module">Modules</string>
    <string name="no_warrenty">No warranty for the content!</string>
    <string name="fortschritt">Progress</string>
    <string name="exams">Exams</string>
    <string name="well">... Well ...</string>
    <string name="gonnaLogIn">Trying to log in...</string>
    <string name="partytitle">The list for partys, groups, celebrations etc.\n100% unofficially!</string>
    <string name="create_party">Create Party!</string>
    <string name="datum">Date</string>
    <string name="beschreibung">Description</string>
    <string name="slot_1_4">Slot, 1-4</string>
    <string name="start">Start</string>
    <string name="ende">End</string>
    <string name="neue_party">Edit Party</string>
    <string name="choose_party">Choose Party Slot</string>
    <string name="adresse">Address</string>
    <string name="in_allem">Everywhere, Notice: the list is not complete!</string>
    <string name="montag">Monday</string>
    <string name="dienstag">Tuesday</string>
    <string name="mittwoch">Wednesday</string>
    <string name="donnerstag">Thursday</string>
    <string name="freitag">Friday</string>
    <string name="samstag">Saturday</string>
    <string name="sonntag">Sunday</string>
    <string name="veranstaltungs_id">Veranstaltungs-ID</string>
    <string name="semester">Semester</string>
</resources>
