<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editDate">

    <Button
        android:id="@+id/back011"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/editTerminConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/editTerminDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/delete_date" />

            <EditText
                android:id="@+id/editTerminTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/name"
                />

            <EditText
                android:id="@+id/editTerminDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/beschreibung"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editTerminDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/datum"
                android:inputType="date" />
            <!-- android:visibility="gone" -->

            <EditText
                android:id="@+id/editTerminStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/start"
                android:inputType="time" />

            <EditText
                android:id="@+id/editTerminEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ende"
                android:inputType="time"/>

            <EditText
                android:id="@+id/editTerminRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/slot_1_4"
                android:inputType="number" />

            <SeekBar
                android:id="@+id/editTerminH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="1000"
                android:progress="40" />

            <SeekBar
                android:id="@+id/editTerminS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="1000"
                android:progress="300" />

            <SeekBar
                android:id="@+id/editTerminV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="1000"
                android:progress="900" />

            <CheckBox
                android:id="@+id/editTerminAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply_all" />

            <Button
                android:id="@+id/editTerminSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>