<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/ausfallSite">

    <!-- TODO Suchfeld fehlt noch -->

    <Button
        android:id="@+id/back003"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/back_to_main" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/today_change"
        android:id="@+id/dateSelectAusfall"
        android:background="@color/colorAccent"/>

    <EditText
        android:id="@+id/ausfallSuche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/suche"
        android:inputType="textPersonName"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ausfall">
        </LinearLayout>
    </ScrollView>
</LinearLayout>
